<resources>
    <string name="app_name">OmniWheels</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="refresh_devices">Refresh</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Off</string>
    <string name="stop">Emergency stop</string>
    <string name="no_usb_devices">No USB devices over OTG</string>
    <string name="usb_device">Arduino USB</string>
    <string name="status_ready">Connect Arduino by OTG and press Refresh.</string>
    <string name="status_connect_usb">Connect Arduino to the phone through an OTG adapter.</string>
    <string name="status_usb_ready">Choose the Arduino USB device.</string>
    <string name="status_usb_permission">Requesting USB permission...</string>
    <string name="status_usb_permission_denied">USB permission was denied.</string>
    <string name="status_usb_opening">Opening %1$s at 115200 baud...</string>
    <string name="status_usb_connected">Connected to %1$s over OTG. Commands are streaming.</string>
    <string name="status_usb_failed">USB connection failed: %1$s</string>
    <string name="status_write_failed">Command was not sent. Check OTG cable, Arduino power, and USB link.</string>
    <string name="vector_value">X: %1$d%%  Y: %2$d%%</string>
    <string name="rotation_value">Rotation: %1$d%%</string>
    <string name="rotation_zero">Rotation: 0%</string>
    <string name="speed_value">Speed limit: %1$d PWM</string>
    <string name="speed_default">Speed limit: 180 PWM</string>
    <string name="start_debug">Min PWM: %1$d</string>
    <string name="start_debug_placeholder">Min PWM: --</string>
    <string name="min_pwm_value">Min PWM: %1$d</string>
    <string name="min_pwm_default">Min PWM: 85</string>
    <string name="command_placeholder">M 0 0 0 0</string>
    <string name="motor_front_left">FL: %1$d</string>
    <string name="motor_front_right">FR: %1$d</string>
    <string name="motor_rear_left">RL: %1$d</string>
    <string name="motor_rear_right">RR: %1$d</string>
    <string name="test_front_left">FL</string>
    <string name="test_front_right">FR</string>
    <string name="test_rear_left">RL</string>
    <string name="test_rear_right">RR</string>
</resources>
